# hanirizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION-QUICK-START.md  LICENSE  README.md  bandit-report.json  check-dependencies.sh  install.sh  netsan  netsan-dev.py  netsan.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-netsan.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: API.md  Makefile
examples/: basic-config.json  cisco-config.yaml  sample-router.conf
src/: __init__.py  archive_handler.py  backup.py  cli.py  config.py  logging_config.py  patterns.py  sanitizer.py  version_check.py  zip_handler.py
tests/: README.md  __init__.py  test_archive_handler.py  test_patterns.py  test_sanitizer.py
