[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanirizer"
dynamic = ["version"]
description = "A robust tool for sanitizing sensitive information in network device configuration files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Network Automation Community", email = "support@example.com"}
]
keywords = [
    "network", "configuration", "sanitization", "security",
    "cisco", "juniper", "arista", "paloalto", "automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pyminizip>=0.2.6",
    "requests>=2.28.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/memmmmike/hanirizer"
Repository = "https://github.com/memmmmike/hanirizer"
"Bug Tracker" = "https://github.com/memmmmike/hanirizer/issues"

[project.scripts]
netsan = "src.cli:main"
network-sanitizer = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503"]
max-complexity = 10
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
# Skip specific tests - these are false positives
# B404: Import subprocess - needed for 7z/unrar integration
# B603: subprocess without shell - we use it safely with hardcoded commands  
# B607: partial path - 7z and unrar are standard system tools
skips = ["B404", "B603", "B607"]